# algorithm-academy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
docker/: Caddyfile  Dockerfile  docker-compose.prod.yml
environment/: .env.template
src/: api.py  config.py  constants.py  database.py  main.py
tests/: test_database.py
