[tool.poetry]
name = "algorithm-academy"
version = "0.1.0"
description = ""
authors = ["Alexander Kondratev", "Maxim Melnikov"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.13.0"
asyncpg = "^0.29.0"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
ruff = "^0.1.7"

[tool.isort]
case_sensitive = false
combine_as_imports = true
extend_skip = ["_version.py", "versioneer.py", "__init__.py"]
extend_skip_glob = ["docs/*", "*venv*/*"]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
lines_after_imports = -1
multi_line_output = 3
profile = "black"
reverse_relative = true
skip = [".gitignore", ".dockerignore", "migrations"]
use_parentheses = true
wrap_length = 88

[tool.ruff]
fix = true
line-length = 88
unsafe-fixes = true

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
